Fix bug scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,15 @@ body,
   position: relative;
 }
 
+.content {
+  height: 100vh;
+  overflow-y: scroll;
+}
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
+}
+:hover::-webkit-scrollbar {
+  width: 4px;
 }
 
 /* Track */
